small fix to product spacing and positioning

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,7 @@
+html {
+  width: 100%;
+}
+
 body {
   min-height: 100vh;
   color: var(--color-text);
@@ -8,7 +12,6 @@ body {
   line-height: 1.6;
   font-family: vollkorn;
   color: var(--black);
-  min-width: 212px;
   font-size: 15px;
   transition: all 0.15s ease-in-out;
   text-rendering: optimizeLegibility;
